# light_clouds

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/actions/: build_check.yml
.github/workflows/: build_check.yml
examples/: example.cpp
files/: output.pcd
include/: Filters.hpp  Point.hpp  PointCloud.hpp
include/light_clouds/: Filters.hpp  Point.hpp  PointCloud.hpp
src/: example.cpp  main.cpp
tests/: point_cloud_tests.cpp  test_pointcloud.cpp
